# esp32-task

./: ADCMaster.cpp  CBaseTask.cpp  CDelayTimer.cpp  CLock.cpp  CMakeLists.txt  CPrintLog.cpp  CSoftwareTimer.cpp  CTrace.cpp  CTraceJsonTask.cpp  CTraceTask.cpp  I2CMaster.cpp  Kconfig.projbuild  README.md  idf_component.yml
.github/workflows/: check.yml
include/: ADCMaster.h  CBaseTask.h  CDelayTimer.h  CLock.h  CPrintLog.h  CSoftwareTimer.h  CTrace.h  CTraceJsonTask.h  CTraceTask.h  I2CMaster.h  ITraceLog.h  TFifoArray.h
test/: CMakeLists.txt  baseTaskTest.h  component.mk  test_task.cpp
