idf_component_register(SRCS "CDelayTimer.cpp" "CTraceTask.cpp" "CBaseTask.cpp"
                            "CLock.cpp"
                            "CPrintLog.cpp"
                            "CSoftwareTimer.cpp"
                            "CTrace.cpp"
                            "CTraceJsonTask.cpp"
                            "I2CMaster.cpp"
                            "ADCMaster.cpp"
                    INCLUDE_DIRS "include"
                    REQUIRES esp_timer esp_driver_gptimer esp_driver_i2c esp_adc)
